# esper

./: .pylintrc  README.md  pyproject.toml  validate_phase1_week1.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
docs/architecture/: 1. Esper - High Level Design.md  2. Kasmina - Seed Controller.md  2. Kasmina - The Operator.md  3. Tamiyo - System Architect.md  3. Tamiyo - The Controller.md  4. Karn - Component Designer.md  4. Karn - The Architect.md  5. Urza - Component Library.md  5. Urza - The Library.md  6. Urabrask - Component Evaluation.md  6. Urabrask - The Crucible.md  7. Tolaria - The Trainer.md  7. Tolaria - Training Environment.md  Esper - High Level Design.md
docs/architecture/adr/: ADR-001: The `Kasmina-Tamiyo` Interface.md
docs/architecture/detailed_designs/: 3. Karn - The Architect.md  4. Urza - The Library.md  8. Oona - Message Bus.md
docs/architecture/detailed_designs/kasmina/: T-001: Contracts Definition  design.md  detailed_design.md  implementation_plan.md  jit_kernel.md  overview.md  primatives.md
docs/architecture/other/: INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  cover_sheet.md  feedback.md  kasmina_tma_ffi.py  triton_kernel.md  triton_kernel.py
docs/architecture/taskings/: T-001: Contracts Definition
docs/old/: 6. Urabrask - The Crucible.md  7. Tolaria - The Trainer.md  8. Simic - The Sculptor.md
esper/kasmina/: blueprint_ir.py  caching.py  compilation.py  execution.py  integration.py  shape_inference.py
tests/kasmina/: test_blueprint_ir.py  test_shape_inference.py
(+2 files in other folders)
