[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esper"
version = "0.0.1"
authors = [
  { name="System Architecture Team", email="author@example.com" },
]
description = "Esper Morphogenetic Training Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "triton>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "prometheus-client>=0.17.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "pylint>=2.17.0",
    "pytype>=2023.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = [
  "esper"
]
testpaths = [
  "tests",
]

[tool.setuptools.packages.find]
where = ["esper"]

[tool.pytype]
inputs = ["esper"]
exclude = ["tests"]
python_version = "3.12"
